--- a/15 - LocalStorage/style.css
+++ b/15 - LocalStorage/style.css
@@ -76,3 +76,8 @@
       outline:0;
       border:1px solid rgba(0,0,0,0.1);
     }
+
+    p a {
+      text-decoration: underline;
+      cursor: pointer;
+    }
